--- a/main.html
+++ b/main.html
@@ -7,6 +7,47 @@
 </head>
 
 <body>
+	<div>
+		<button data-ns-test ="block-inline-button">Test1</button>
+		<button data-ns-test ="block-inline-button">Test2</button>
+		Answer:Inline
+
+		<div data-ns-test ="block-inline-div">Test1</div>
+		<div data-ns-test ="block-inline-div">Test2</div>
+		Answer:Block
+
+		<span data-ns-test ="block-inline-span">Test1</span>
+		<span data-ns-test ="block-inline-span">Test2</span>
+		Answer:inline
+
+		<p data-ns-test ="block-inline-p">Test1</p>
+		<p data-ns-test ="block-inline-p">Test2</p>
+		Answer:Block
+
+		<input data-ns-test="block-inline-input"  value="Test1"/>
+		<input data-ns-test="block-inline-input" value="Test2"/>
+		Answer:inline
+
+		<cite data-ns-test="block-inline-cite">Test1</cite>
+		<cite data-ns-test="block-inline-cite">Test2</cite>
+		Answer:inline
+
+		<code data-ns-test="block-inline-code">Test1</code>
+		<code data-ns-test="block-inline-code">Test2</code
+		Answer:inline					
+		<br>
+		<h1 data-ns-test="block-inline-h1">Test1</h1>
+	    <h1 data-ns-test="block-inline-h1">Test2</h1>
+	    Answer: Block
+
+		<sup data-ns-test ="block-inline-sup">Test1</sup>
+		<sup data-ns-test ="block-inline-sup">Test2</sup>
+		Answer:inline
+
+		<sup data-ns-test ="block-inline-sub">Test1</sup>
+		<sup data-ns-test ="block-inline-sub">Test2</sup>
+		Answer:inline
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
