--- a/main.html
+++ b/main.html
@@ -11,39 +11,51 @@
 		<button data-ns-test ="block-inline-button">Test1</button>
 		<button data-ns-test ="block-inline-button">Test2</button>
 		Answer:Inline
-
+	</div>
+	<div>
 		<div data-ns-test ="block-inline-div">Test1</div>
 		<div data-ns-test ="block-inline-div">Test2</div>
 		Answer:Block
+</div>
 
+	<div>
 		<span data-ns-test ="block-inline-span">Test1</span>
 		<span data-ns-test ="block-inline-span">Test2</span>
 		Answer:inline
+</div>
 
+	<div>
 		<p data-ns-test ="block-inline-p">Test1</p>
 		<p data-ns-test ="block-inline-p">Test2</p>
 		Answer:Block
+</div>
 
+	<div>
 		<input data-ns-test="block-inline-input"  value="Test1"/>
 		<input data-ns-test="block-inline-input" value="Test2"/>
 		Answer:inline
-
+</div>
+	<div>
 		<cite data-ns-test="block-inline-cite">Test1</cite>
 		<cite data-ns-test="block-inline-cite">Test2</cite>
 		Answer:inline
-
+</div>
+	<div>
 		<code data-ns-test="block-inline-code">Test1</code>
 		<code data-ns-test="block-inline-code">Test2</code
 		Answer:inline					
-		<br>
+		</div>
+	<div>
 		<h1 data-ns-test="block-inline-h1">Test1</h1>
 	    <h1 data-ns-test="block-inline-h1">Test2</h1>
 	    Answer: Block
-
+</div>
+	<div>
 		<sup data-ns-test ="block-inline-sup">Test1</sup>
 		<sup data-ns-test ="block-inline-sup">Test2</sup>
 		Answer:inline
-
+		</div>
+	<div>
 		<sup data-ns-test ="block-inline-sub">Test1</sup>
 		<sup data-ns-test ="block-inline-sub">Test2</sup>
 		Answer:inline
